Updated reports for Friulian

--- a/reports/mono-2.0/HPLT-v2-fur_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fur_Latn.yaml
@@ -100,32 +100,32 @@ hardrules_tags: '{"not_too_long": 10765, "not_too_short": 89302, "no_urls": 9366
 sentence_pairs: 730045
 src_bytes: 112.39 MB
 src_chars: 114043358
-src_langs: '[["it", 439680], ["fr", 75067], ["en", 47432], ["ro", 35485], ["de", 27294],
-  ["es", 16796], ["pt", 15959], ["ca", 9850], ["pl", 9776], ["eml", 5232], ["nl",
-  3992], ["eo", 2754], ["nb", 2042], ["sq", 2018], ["oc", 1856], ["eu", 1816], ["br",
-  1713], ["tr", 1655], ["hr", 1382], ["hu", 1361], ["pms", 1298], ["ru", 1233], ["cs",
-  1209], ["sv", 1187], ["ceb", 1135], ["la", 1072], ["ko", 994], ["sr", 841], ["wa",
-  825], ["lmo", 782], ["ku", 747], ["zh", 729], ["vec", 663], ["bs", 656], ["id",
-  655], ["vi", 648], ["ia", 645], ["sl", 611], ["lb", 481], ["fi", 443], ["cy", 408],
-  ["ms", 406], ["nap", 403], ["rm", 371], ["io", 363], ["sk", 355], ["ja", 333], ["jbo",
-  330], ["gl", 315], ["uk", 300], ["tl", 279], ["da", 275], ["cbk", 271], ["el", 257],
-  ["uz", 251], ["lv", 244], ["fy", 243], ["be", 225], ["lt", 210], ["kk", 192], ["et",
-  190], ["war", 175], ["scn", 158], ["ht", 145], ["jv", 143], ["yo", 128], ["af",
-  125], ["li", 116], ["ast", 113], ["ce", 110], ["ie", 109], ["mk", 107], ["su", 103],
-  ["tg", 101], ["xal", 89], ["als", 86], ["mwl", 83], ["az", 81], ["gd", 71], ["hy",
-  64], ["mt", 62], ["ga", 60], ["hsb", 58], ["sw", 57], ["diq", 57], ["is", 55], ["gn",
-  51], ["ur", 50], ["mg", 47], ["an", 46], ["ba", 42], ["ar", 42], ["nds", 40], ["ilo",
-  40], ["sc", 39], ["mn", 39], ["th", 38], ["gv", 38], ["dsb", 38], ["ml", 37], ["kn",
-  35], ["fa", 31], ["tk", 30], ["pam", 30], ["min", 30], ["kw", 26], ["kv", 26], ["or",
-  25], ["pfl", 23], ["nn", 23], ["gom", 23], ["sco", 22], ["km", 22], ["te", 21],
-  ["hi", 21], ["arz", 21], ["ta", 20], ["si", 19], ["so", 18], ["qu", 18], ["bn",
-  18], ["bar", 18], ["ne", 17], ["tt", 16], ["he", 16], ["vo", 14], ["bg", 14], ["ps",
-  13], ["mr", 11], ["av", 11], ["mrj", 10], ["gu", 10], ["co", 10], ["yi", 8], ["vep",
-  8], ["ka", 8], ["frr", 7], ["yue", 6], ["lo", 5], ["krc", 5], ["dv", 5], ["bcl",
-  5], ["am", 5], ["vls", 4], ["ug", 4], ["os", 4], ["myv", 4], ["lez", 4], ["mhr",
-  3], ["ky", 3], ["hif", 3], ["tyv", 2], ["my", 2], ["wuu", 1], ["sah", 1], ["pnb",
-  1], ["nah", 1], ["dty", 1], ["cv", 1], ["ckb", 1], ["bxr", 1], ["bo", 1], ["bh",
-  1]]'
+src_langs: '[["fur", 440481], ["it", 64665], ["en", 47432], ["ro", 35485], ["de",
+  27294], ["es", 16796], ["pt", 15959], ["ca", 9850], ["pl", 9776], ["fr", 9601],
+  ["eml", 5232], ["nl", 3992], ["eo", 2754], ["nb", 2042], ["sq", 2018], ["oc", 1856],
+  ["eu", 1816], ["br", 1713], ["tr", 1655], ["hr", 1382], ["hu", 1361], ["pms", 1298],
+  ["ru", 1233], ["cs", 1209], ["sv", 1187], ["ceb", 1135], ["la", 1072], ["ko", 994],
+  ["sr", 841], ["wa", 825], ["lmo", 782], ["ku", 747], ["zh", 729], ["vec", 663],
+  ["bs", 656], ["id", 655], ["vi", 648], ["ia", 645], ["sl", 611], ["lb", 481], ["fi",
+  443], ["cy", 408], ["ms", 406], ["nap", 403], ["rm", 371], ["io", 363], ["sk", 355],
+  ["ja", 333], ["jbo", 330], ["gl", 315], ["uk", 300], ["tl", 279], ["da", 275], ["cbk",
+  271], ["el", 257], ["uz", 251], ["lv", 244], ["fy", 243], ["be", 225], ["lt", 210],
+  ["kk", 192], ["et", 190], ["war", 175], ["scn", 158], ["ht", 145], ["jv", 143],
+  ["yo", 128], ["af", 125], ["li", 116], ["ast", 113], ["ce", 110], ["ie", 109], ["mk",
+  107], ["su", 103], ["tg", 101], ["xal", 89], ["als", 86], ["mwl", 83], ["az", 81],
+  ["gd", 71], ["hy", 64], ["mt", 62], ["ga", 60], ["hsb", 58], ["sw", 57], ["diq",
+  57], ["is", 55], ["gn", 51], ["ur", 50], ["mg", 47], ["an", 46], ["ba", 42], ["ar",
+  42], ["nds", 40], ["ilo", 40], ["sc", 39], ["mn", 39], ["th", 38], ["gv", 38], ["dsb",
+  38], ["ml", 37], ["kn", 35], ["fa", 31], ["tk", 30], ["pam", 30], ["min", 30], ["kw",
+  26], ["kv", 26], ["or", 25], ["pfl", 23], ["nn", 23], ["gom", 23], ["sco", 22],
+  ["km", 22], ["te", 21], ["hi", 21], ["arz", 21], ["ta", 20], ["si", 19], ["so",
+  18], ["qu", 18], ["bn", 18], ["bar", 18], ["ne", 17], ["tt", 16], ["he", 16], ["vo",
+  14], ["bg", 14], ["ps", 13], ["mr", 11], ["av", 11], ["mrj", 10], ["gu", 10], ["co",
+  10], ["yi", 8], ["vep", 8], ["ka", 8], ["frr", 7], ["yue", 6], ["lo", 5], ["krc",
+  5], ["dv", 5], ["bcl", 5], ["am", 5], ["vls", 4], ["ug", 4], ["os", 4], ["myv",
+  4], ["lez", 4], ["mhr", 3], ["ky", 3], ["hif", 3], ["tyv", 2], ["my", 2], ["wuu",
+  1], ["sah", 1], ["pnb", 1], ["nah", 1], ["dty", 1], ["cv", 1], ["ckb", 1], ["bxr",
+  1], ["bo", 1], ["bh", 1]]'
 src_sent_tokens: '[[0, 45], [1, 34676], [2, 35971], [3, 49247], [4, 32432], [5, 29309],
   [6, 25491], [7, 23665], [8, 46650], [9, 28298], [10, 25339], [11, 20125], [12, 19116],
   [13, 17847], [14, 14663], [15, 13712], [16, 11573], [17, 9731], [18, 7902], [19,
@@ -381,7 +381,6 @@ timestamp: 1732704025.140537
 unique_sents: 266635
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fastspell
 src_ngrams: '{"1": [[["l"], 78798], [["ai"], 70541], [["fat"], 46094], [["fri\u00fbl"],
   45132], [["furlan"], 39870]], "2": [[["clap clap"], 24950], [["daj dajdaj"], 23820],
   [["dajdaj daj"], 23816], [["lenghe furlane"], 13231], [["fat fat"], 12209]], "3":
