Updated reports for Venetian

--- a/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
@@ -124,8 +124,8 @@ hardrules_tags: '{"not_too_long": 20447, "not_too_short": 211343, "no_urls": 293
 sentence_pairs: 1578812
 src_bytes: 210.64 MB
 src_chars: 216477126
-src_langs: '[["it", 899655], ["es", 136384], ["vec", 123556], ["en", 107392], ["ca",
-  71981], ["fr", 48945], ["pt", 29622], ["gl", 22945], ["de", 14790], ["pl", 13521],
+src_langs: '[["it", 723831], ["vec", 374691], ["en", 107392], ["ca", 71981], ["es",
+  61073], ["fr", 48945], ["pt", 29622], ["gl", 22945], ["de", 14790], ["pl", 13521],
   ["pms", 11124], ["nl", 9395], ["oc", 6343], ["eo", 5004], ["ro", 4720], ["lmo",
   4307], ["eu", 4222], ["su", 4057], ["sv", 3770], ["ru", 3220], ["eml", 3093], ["ast",
   2804], ["fi", 2490], ["ia", 2358], ["tr", 2091], ["ceb", 2065], ["la", 2060], ["sr",
