Updated reports for Occitan

--- a/reports/mono-2.0/HPLT-v2-oci_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-oci_Latn.yaml
@@ -140,8 +140,8 @@ hardrules_tags: '{"not_too_long": 43911, "not_too_short": 464872, "no_urls": 433
 sentence_pairs: 4194906
 src_bytes: 621.05 MB
 src_chars: 631394992
-src_langs: '[["oc", 1402900], ["ca", 972107], ["fr", 679428], ["es", 378800], ["pt",
-  201789], ["en", 201573], ["it", 136938], ["de", 38261], ["ro", 27070], ["nl", 13452],
+src_langs: '[["oc", 2581181], ["fr", 679428], ["pt", 201789], ["en", 201573], ["it",
+  136938], ["ca", 112482], ["es", 60144], ["de", 38261], ["ro", 27070], ["nl", 13452],
   ["cs", 13300], ["sr", 6809], ["pl", 6566], ["sv", 6010], ["ru", 5985], ["eo", 5657],
   ["eu", 5403], ["gl", 5382], ["ceb", 4927], ["hu", 4717], ["ms", 4364], ["id", 4223],
   ["br", 4171], ["ce", 4157], ["ast", 4002], ["lmo", 3681], ["la", 3279], ["nb", 2904],
