Updated reports for Maithili

--- a/reports/mono-2.0/HPLT-v2-mai_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-mai_Deva.yaml
@@ -122,7 +122,7 @@ hardrules_tags: '{"not_too_long": 11304, "not_too_short": 73459, "no_urls": 8216
 sentence_pairs: 645527
 src_bytes: 233.26 MB
 src_chars: 96119799
-src_langs: '[["hi", 471801], ["mai", 55850], ["ne", 27846], ["mr", 25785], ["en",
+src_langs: '[["mai", 424437], ["hi", 103214], ["ne", 27846], ["mr", 25785], ["en",
   24658], ["bh", 12925], ["sa", 8242], ["new", 5578], ["it", 2054], ["gom", 1113],
   ["fr", 970], ["de", 732], ["es", 722], ["el", 519], ["cs", 469], ["bpy", 347], ["bn",
   337], ["ru", 326], ["dty", 323], ["pt", 306], ["ca", 259], ["mt", 229], ["zh", 201],
