Updated reports for Latgalian

--- a/reports/mono-2.0/HPLT-v2-ltg_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ltg_Latn.yaml
@@ -73,24 +73,24 @@ hardrules_tags: '{"not_too_long": 1465, "not_too_short": 16300, "no_urls": 5828,
 sentence_pairs: 151382
 src_bytes: 27.41 MB
 src_chars: 26735255
-src_langs: '[["lv", 104097], ["lt", 10693], ["fi", 5573], ["en", 5163], ["de", 4390],
-  ["pl", 2164], ["sl", 1873], ["it", 1850], ["nl", 1805], ["fr", 1734], ["sk", 1607],
-  ["eo", 1400], ["es", 1159], ["sr", 925], ["pt", 807], ["sv", 767], ["id", 473],
-  ["cs", 385], ["hr", 374], ["ca", 325], ["hu", 266], ["ru", 260], ["bs", 240], ["et",
-  239], ["eu", 183], ["tr", 137], ["ko", 125], ["ur", 124], ["ceb", 119], ["vo", 113],
-  ["az", 102], ["uz", 99], ["gl", 99], ["el", 89], ["war", 83], ["uk", 80], ["nb",
-  80], ["io", 79], ["mwl", 74], ["sq", 70], ["ms", 67], ["th", 63], ["tg", 61], ["hy",
-  58], ["vi", 49], ["cy", 48], ["da", 44], ["vep", 42], ["la", 42], ["ro", 38], ["fy",
-  38], ["br", 38], ["tl", 33], ["mg", 33], ["sw", 30], ["gv", 25], ["mn", 24], ["ja",
-  23], ["oc", 21], ["nn", 21], ["is", 18], ["als", 18], ["zh", 17], ["mt", 16], ["yue",
-  14], ["af", 14], ["yo", 13], ["rm", 13], ["yi", 11], ["jbo", 11], ["kw", 10], ["fa",
-  10], ["bg", 10], ["ilo", 9], ["bo", 9], ["an", 9], ["ml", 8], ["ia", 8], ["hi",
-  8], ["ar", 8], ["sah", 7], ["mk", 7], ["qu", 6], ["diq", 6], ["ckb", 6], ["so",
-  5], ["pa", 5], ["min", 5], ["li", 5], ["ie", 5], ["ast", 5], ["su", 4], ["ku", 4],
-  ["kk", 4], ["hsb", 4], ["he", 4], ["tk", 3], ["ta", 3], ["os", 3], ["ne", 3], ["lb",
-  3], ["ka", 3], ["ga", 3], ["co", 3], ["bn", 3], ["vls", 2], ["te", 2], ["frr", 2],
-  ["av", 2], ["nds", 1], ["my", 1], ["kn", 1], ["jv", 1], ["hif", 1], ["gn", 1], ["azb",
-  1], ["as", 1]]'
+src_langs: '[["ltg", 55280], ["lv", 54014], ["fi", 5573], ["lt", 5496], ["en", 5163],
+  ["de", 4390], ["pl", 2164], ["sl", 1873], ["it", 1850], ["nl", 1805], ["fr", 1734],
+  ["sk", 1607], ["eo", 1400], ["es", 1159], ["sr", 925], ["pt", 807], ["sv", 767],
+  ["id", 473], ["cs", 385], ["hr", 374], ["ca", 325], ["hu", 266], ["ru", 260], ["bs",
+  240], ["et", 239], ["eu", 183], ["tr", 137], ["ko", 125], ["ur", 124], ["ceb", 119],
+  ["vo", 113], ["az", 102], ["uz", 99], ["gl", 99], ["el", 89], ["war", 83], ["uk",
+  80], ["nb", 80], ["io", 79], ["mwl", 74], ["sq", 70], ["ms", 67], ["th", 63], ["tg",
+  61], ["hy", 58], ["vi", 49], ["cy", 48], ["da", 44], ["vep", 42], ["la", 42], ["ro",
+  38], ["fy", 38], ["br", 38], ["tl", 33], ["mg", 33], ["sw", 30], ["gv", 25], ["mn",
+  24], ["ja", 23], ["oc", 21], ["nn", 21], ["is", 18], ["als", 18], ["zh", 17], ["mt",
+  16], ["yue", 14], ["af", 14], ["yo", 13], ["rm", 13], ["yi", 11], ["jbo", 11], ["kw",
+  10], ["fa", 10], ["bg", 10], ["ilo", 9], ["bo", 9], ["an", 9], ["ml", 8], ["ia",
+  8], ["hi", 8], ["ar", 8], ["sah", 7], ["mk", 7], ["qu", 6], ["diq", 6], ["ckb",
+  6], ["so", 5], ["pa", 5], ["min", 5], ["li", 5], ["ie", 5], ["ast", 5], ["su", 4],
+  ["ku", 4], ["kk", 4], ["hsb", 4], ["he", 4], ["tk", 3], ["ta", 3], ["os", 3], ["ne",
+  3], ["lb", 3], ["ka", 3], ["ga", 3], ["co", 3], ["bn", 3], ["vls", 2], ["te", 2],
+  ["frr", 2], ["av", 2], ["nds", 1], ["my", 1], ["kn", 1], ["jv", 1], ["hif", 1],
+  ["gn", 1], ["azb", 1], ["as", 1]]'
 src_sent_tokens: '[[0, 7], [1, 5358], [2, 5352], [3, 5444], [4, 7191], [5, 6322],
   [6, 7215], [7, 8129], [8, 5801], [9, 5452], [10, 4759], [11, 3716], [12, 3526],
   [13, 2818], [14, 2635], [15, 2476], [16, 2311], [17, 2242], [18, 1872], [19, 1668],
@@ -215,7 +215,6 @@ timestamp: 1733496277.087237
 unique_sents: 77506
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fastspell
 src_ngrams: '{"1": [[["i"], 118799], [["ir"], 55420], [["nu"], 38709], [["par"], 38067],
   [["kai"], 28443]], "2": [[["labot pirmkodu"], 2730], [["tys ir"], 2658], [["latgolys
   studentu"], 2636], [["par t\u016b"], 2421], [["latgal\u012b\u0161u rokstu"], 2093]],
