Updated reports for Magahi

--- a/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
@@ -41,14 +41,14 @@ hardrules_tags: '{"not_too_long": 730, "not_too_short": 1602, "no_urls": 25, "no
 sentence_pairs: 19288
 src_bytes: 10.07 MB
 src_chars: 4263812
-src_langs: '[["hi", 16177], ["en", 1182], ["mr", 621], ["ne", 251], ["bh", 250], ["sa",
-  222], ["mai", 147], ["new", 126], ["gom", 44], ["fr", 29], ["su", 24], ["tr", 20],
-  ["hu", 19], ["la", 13], ["te", 11], ["dty", 11], ["de", 10], ["ug", 9], ["pt", 9],
-  ["id", 9], ["el", 9], ["wuu", 8], ["tg", 8], ["uz", 7], ["sv", 6], ["es", 6], ["nl",
-  5], ["mk", 5], ["ga", 5], ["cs", 4], ["bpy", 4], ["pam", 3], ["ku", 3], ["it", 3],
-  ["eo", 3], ["sr", 2], ["ru", 2], ["mt", 2], ["ko", 2], ["et", 2], ["az", 2], ["ast",
-  2], ["am", 2], ["uk", 1], ["tk", 1], ["ta", 1], ["ro", 1], ["pa", 1], ["eml", 1],
-  ["ceb", 1], ["ca", 1], ["bn", 1]]'
+src_langs: '[["mag", 14137], ["hi", 2040], ["en", 1182], ["mr", 621], ["ne", 251],
+  ["bh", 250], ["sa", 222], ["mai", 147], ["new", 126], ["gom", 44], ["fr", 29], ["su",
+  24], ["tr", 20], ["hu", 19], ["la", 13], ["te", 11], ["dty", 11], ["de", 10], ["ug",
+  9], ["pt", 9], ["id", 9], ["el", 9], ["wuu", 8], ["tg", 8], ["uz", 7], ["sv", 6],
+  ["es", 6], ["nl", 5], ["mk", 5], ["ga", 5], ["cs", 4], ["bpy", 4], ["pam", 3], ["ku",
+  3], ["it", 3], ["eo", 3], ["sr", 2], ["ru", 2], ["mt", 2], ["ko", 2], ["et", 2],
+  ["az", 2], ["ast", 2], ["am", 2], ["uk", 1], ["tk", 1], ["ta", 1], ["ro", 1], ["pa",
+  1], ["eml", 1], ["ceb", 1], ["ca", 1], ["bn", 1]]'
 src_sent_tokens: '[[1, 185], [2, 551], [3, 958], [4, 538], [5, 662], [6, 634], [7,
   806], [8, 576], [9, 479], [10, 752], [11, 500], [12, 546], [13, 305], [14, 528],
   [15, 325], [16, 346], [17, 376], [18, 390], [19, 403], [20, 416], [21, 348], [22,
@@ -189,8 +189,7 @@ src_unique_sents: '[[1, 77], [2, 180], [3, 196], [4, 331], [5, 427], [6, 302], [
 srclang: mag
 timestamp: 1733428418.4925988
 unique_sents: 10798
-warnings:
-- src_fastspell
+warnings: []
 src_ngrams: '{"1": [[["\u0906\u0909"], 23504], [["\u092e\u0947\u0902"], 19572], [["\u0939\u0907"],
   15822], [["\u090a"], 11847], [["\u0928\u092f\u0901"], 11445]], "2": [[["\u0930\u0939\u0932\u0947
   \u0939\u0932"], 2185], [["\u091c\u093e \u0939\u0907"], 1461], [["\u0915\u093f \u090a"],
