Updated reports for Sardinian

--- a/reports/mono-2.0/HPLT-v2-srd_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-srd_Latn.yaml
@@ -117,24 +117,24 @@ hardrules_tags: '{"not_too_long": 16745, "not_too_short": 145185, "no_urls": 147
 sentence_pairs: 917090
 src_bytes: 143.62 MB
 src_chars: 147885449
-src_langs: '[["it", 325315], ["es", 99941], ["en", 96589], ["ca", 89469], ["fr", 55112],
-  ["ro", 38746], ["la", 37718], ["pt", 28455], ["de", 13013], ["oc", 11002], ["pms",
-  9764], ["tl", 7183], ["ceb", 5670], ["eu", 5343], ["sc", 5280], ["ia", 5036], ["eo",
-  4892], ["lmo", 4291], ["cs", 4204], ["ms", 3890], ["nl", 3708], ["hr", 3087], ["ru",
-  2636], ["pl", 2550], ["sr", 2459], ["tr", 2336], ["cy", 2207], ["br", 2163], ["vec",
-  2099], ["gl", 2049], ["ja", 1865], ["rm", 1838], ["sv", 1814], ["id", 1701], ["scn",
-  1652], ["eml", 1500], ["ast", 1426], ["fi", 1393], ["hu", 1288], ["nap", 1250],
-  ["wa", 1121], ["sl", 1107], ["jbo", 1065], ["war", 1057], ["io", 1034], ["lt", 1014],
-  ["vi", 983], ["nb", 944], ["zh", 844], ["su", 802], ["mt", 746], ["mk", 708], ["da",
-  515], ["bs", 498], ["et", 485], ["sk", 469], ["qu", 469], ["sq", 467], ["tg", 457],
-  ["uk", 434], ["ilo", 429], ["ie", 414], ["fa", 392], ["gv", 389], ["cbk", 362],
-  ["ur", 340], ["ko", 322], ["az", 267], ["uz", 263], ["sw", 262], ["yo", 261], ["ml",
-  256], ["ku", 239], ["el", 232], ["nds", 227], ["lb", 226], ["mwl", 220], ["an",
-  214], ["sco", 211], ["als", 207], ["kw", 160], ["ta", 157], ["nah", 149], ["lv",
-  148], ["co", 145], ["gd", 137], ["or", 135], ["ht", 132], ["af", 130], ["kn", 125],
-  ["pam", 123], ["ga", 123], ["mg", 122], ["jv", 112], ["kk", 106], ["bn", 104], ["gn",
-  103], ["hsb", 93], ["xal", 92], ["ckb", 92], ["ar", 91], ["bar", 88], ["hy", 87],
-  ["tk", 79], ["is", 78], ["te", 68], ["diq", 68], ["fy", 63], ["gom", 59], ["bg",
+src_langs: '[["sc", 349443], ["it", 166586], ["en", 96589], ["fr", 55112], ["la",
+  37718], ["pt", 28455], ["es", 23366], ["ca", 14553], ["de", 13013], ["oc", 11002],
+  ["pms", 9764], ["tl", 7183], ["ceb", 5670], ["eu", 5343], ["ia", 5036], ["eo", 4892],
+  ["ro", 4803], ["lmo", 4291], ["cs", 4204], ["ms", 3890], ["nl", 3708], ["hr", 3087],
+  ["ru", 2636], ["pl", 2550], ["sr", 2459], ["tr", 2336], ["cy", 2207], ["br", 2163],
+  ["vec", 2099], ["gl", 2049], ["ja", 1865], ["rm", 1838], ["sv", 1814], ["id", 1701],
+  ["scn", 1652], ["eml", 1500], ["ast", 1426], ["fi", 1393], ["hu", 1288], ["nap",
+  1250], ["wa", 1121], ["sl", 1107], ["jbo", 1065], ["war", 1057], ["io", 1034], ["lt",
+  1014], ["vi", 983], ["nb", 944], ["zh", 844], ["su", 802], ["mt", 746], ["mk", 708],
+  ["da", 515], ["bs", 498], ["et", 485], ["sk", 469], ["qu", 469], ["sq", 467], ["tg",
+  457], ["uk", 434], ["ilo", 429], ["ie", 414], ["fa", 392], ["gv", 389], ["cbk",
+  362], ["ur", 340], ["ko", 322], ["az", 267], ["uz", 263], ["sw", 262], ["yo", 261],
+  ["ml", 256], ["ku", 239], ["el", 232], ["nds", 227], ["lb", 226], ["mwl", 220],
+  ["an", 214], ["sco", 211], ["als", 207], ["kw", 160], ["ta", 157], ["nah", 149],
+  ["lv", 148], ["co", 145], ["gd", 137], ["or", 135], ["ht", 132], ["af", 130], ["kn",
+  125], ["pam", 123], ["ga", 123], ["mg", 122], ["jv", 112], ["kk", 106], ["bn", 104],
+  ["gn", 103], ["hsb", 93], ["xal", 92], ["ckb", 92], ["ar", 91], ["bar", 88], ["hy",
+  87], ["tk", 79], ["is", 78], ["te", 68], ["diq", 68], ["fy", 63], ["gom", 59], ["bg",
   55], ["th", 48], ["hi", 46], ["si", 44], ["vep", 41], ["ne", 39], ["av", 38], ["he",
   36], ["dsb", 35], ["be", 35], ["myv", 31], ["li", 29], ["tyv", 25], ["nn", 25],
   ["gu", 25], ["tt", 24], ["so", 24], ["lo", 24], ["dv", 24], ["min", 23], ["pfl",
