Updated reports for Silesian

--- a/reports/mono-2.0/HPLT-v2-szl_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-szl_Latn.yaml
@@ -107,29 +107,30 @@ hardrules_tags: '{"not_too_long": 9121, "not_too_short": 119550, "no_urls": 5650
 sentence_pairs: 636571
 src_bytes: 104.72 MB
 src_chars: 103242084
-src_langs: '[["pl", 426247], ["hsb", 78697], ["en", 23862], ["dsb", 15947], ["cs",
-  15922], ["de", 13218], ["sl", 9448], ["it", 7603], ["sr", 5562], ["es", 4675], ["hr",
-  4314], ["fr", 4192], ["nl", 2698], ["hu", 2674], ["eo", 2648], ["pt", 1769], ["sk",
-  1584], ["sv", 1457], ["ru", 883], ["zh", 859], ["lt", 857], ["fi", 758], ["tr",
-  698], ["bs", 698], ["uk", 592], ["id", 527], ["nb", 441], ["ro", 430], ["az", 408],
-  ["da", 385], ["et", 370], ["sq", 329], ["ca", 324], ["ceb", 319], ["ur", 289], ["nn",
-  241], ["la", 230], ["af", 212], ["ja", 208], ["tl", 203], ["jbo", 196], ["ms", 167],
-  ["ko", 155], ["lv", 152], ["fy", 151], ["el", 151], ["eu", 150], ["ta", 128], ["lb",
-  124], ["oc", 115], ["vi", 93], ["io", 89], ["jv", 86], ["cy", 79], ["uz", 76], ["sw",
-  72], ["mt", 71], ["gl", 70], ["ar", 70], ["war", 68], ["fa", 64], ["is", 61], ["pam",
-  58], ["nds", 53], ["te", 52], ["hy", 49], ["kw", 47], ["diq", 47], ["eml", 45],
-  ["ast", 36], ["als", 35], ["sah", 33], ["be", 32], ["kk", 29], ["cbk", 28], ["bn",
-  28], ["tk", 27], ["ce", 27], ["bar", 26], ["ilo", 25], ["si", 24], ["mg", 23], ["he",
-  23], ["vo", 22], ["mk", 22], ["ie", 22], ["yi", 21], ["kv", 21], ["ku", 20], ["nah",
-  19], ["ga", 19], ["vec", 18], ["ia", 18], ["br", 18], ["scn", 17], ["ht", 17], ["gd",
-  17], ["wa", 16], ["su", 16], ["pnb", 16], ["wuu", 15], ["qu", 15], ["lmo", 15],
-  ["gn", 15], ["kn", 14], ["gom", 14], ["av", 14], ["pms", 13], ["my", 13], ["krc",
-  13], ["bg", 13], ["vls", 12], ["so", 12], ["ug", 11], ["tg", 11], ["mrj", 11], ["gu",
-  11], ["rm", 9], ["ka", 9], ["as", 9], ["sco", 8], ["yue", 7], ["tt", 6], ["th",
-  5], ["pa", 5], ["yo", 4], ["ne", 4], ["ml", 4], ["ky", 4], ["co", 4], ["vep", 3],
-  ["os", 3], ["min", 3], ["bcl", 3], ["ba", 3], ["xal", 2], ["rue", 2], ["ps", 2],
-  ["mr", 2], ["mn", 2], ["mhr", 2], ["li", 2], ["xmf", 1], ["sd", 1], ["pfl", 1],
-  ["nap", 1], ["mwl", 1], ["lrc", 1], ["lo", 1], ["dv", 1], ["cv", 1], ["an", 1]]'
+src_langs: '[["szl", 243479], ["pl", 182768], ["hsb", 78697], ["en", 23862], ["dsb",
+  15947], ["cs", 15922], ["de", 13218], ["sl", 9448], ["it", 7603], ["sr", 5562],
+  ["es", 4675], ["hr", 4314], ["fr", 4192], ["nl", 2698], ["hu", 2674], ["eo", 2648],
+  ["pt", 1769], ["sk", 1584], ["sv", 1457], ["ru", 883], ["zh", 859], ["lt", 857],
+  ["fi", 758], ["tr", 698], ["bs", 698], ["uk", 592], ["id", 527], ["nb", 441], ["ro",
+  430], ["az", 408], ["da", 385], ["et", 370], ["sq", 329], ["ca", 324], ["ceb", 319],
+  ["ur", 289], ["nn", 241], ["la", 230], ["af", 212], ["ja", 208], ["tl", 203], ["jbo",
+  196], ["ms", 167], ["ko", 155], ["lv", 152], ["fy", 151], ["el", 151], ["eu", 150],
+  ["ta", 128], ["lb", 124], ["oc", 115], ["vi", 93], ["io", 89], ["jv", 86], ["cy",
+  79], ["uz", 76], ["sw", 72], ["mt", 71], ["gl", 70], ["ar", 70], ["war", 68], ["fa",
+  64], ["is", 61], ["pam", 58], ["nds", 53], ["te", 52], ["hy", 49], ["kw", 47], ["diq",
+  47], ["eml", 45], ["ast", 36], ["als", 35], ["sah", 33], ["be", 32], ["kk", 29],
+  ["cbk", 28], ["bn", 28], ["tk", 27], ["ce", 27], ["bar", 26], ["ilo", 25], ["si",
+  24], ["mg", 23], ["he", 23], ["vo", 22], ["mk", 22], ["ie", 22], ["yi", 21], ["kv",
+  21], ["ku", 20], ["nah", 19], ["ga", 19], ["vec", 18], ["ia", 18], ["br", 18], ["scn",
+  17], ["ht", 17], ["gd", 17], ["wa", 16], ["su", 16], ["pnb", 16], ["wuu", 15], ["qu",
+  15], ["lmo", 15], ["gn", 15], ["kn", 14], ["gom", 14], ["av", 14], ["pms", 13],
+  ["my", 13], ["krc", 13], ["bg", 13], ["vls", 12], ["so", 12], ["ug", 11], ["tg",
+  11], ["mrj", 11], ["gu", 11], ["rm", 9], ["ka", 9], ["as", 9], ["sco", 8], ["yue",
+  7], ["tt", 6], ["th", 5], ["pa", 5], ["yo", 4], ["ne", 4], ["ml", 4], ["ky", 4],
+  ["co", 4], ["vep", 3], ["os", 3], ["min", 3], ["bcl", 3], ["ba", 3], ["xal", 2],
+  ["rue", 2], ["ps", 2], ["mr", 2], ["mn", 2], ["mhr", 2], ["li", 2], ["xmf", 1],
+  ["sd", 1], ["pfl", 1], ["nap", 1], ["mwl", 1], ["lrc", 1], ["lo", 1], ["dv", 1],
+  ["cv", 1], ["an", 1]]'
 src_sent_tokens: '[[0, 26], [1, 59622], [2, 34469], [3, 34977], [4, 31420], [5, 28679],
   [6, 49701], [7, 33105], [8, 37490], [9, 25208], [10, 19298], [11, 20715], [12, 14142],
   [13, 10866], [14, 8945], [15, 7012], [16, 8025], [17, 5919], [18, 5493], [19, 4767],
@@ -401,7 +402,6 @@ timestamp: 1733497324.7385247
 unique_sents: 283641
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fastspell
 src_ngrams: '{"1": [[["warszawa"], 87038], [["kod"], 77441], [["pocztowy"], 76999],
   [["so"], 66013], [["jo"], 46665]], "2": [[["kod pocztowy"], 76941], [["warszawa
   kod"], 23807], [["warszawa warszawa"], 11667], [["ruda \u015bl\u0105ska"], 9550],
