--- a/front/package.json
+++ b/front/package.json
@@ -17,9 +17,10 @@
     "hamburger-react": "^2.5.1",
     "html-to-image": "^1.11.11",
     "js-yaml": "^4.1.0",
+    "json5": "^2.2.3",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.334.0",
-    "next": "^15.4.4",
+    "next": "^15.4.5",
     "next-themes": "^0.2.1",
     "next-yaml": "^1.0.1",
     "node": "^18.14.0",
