Upload batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-amh_Ethi.yaml
+++ b/reports/mono-3.0/HPLT-v3-amh_Ethi.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-amh_Ethi
-srclang: am
+srclang: amh
 timestamp: 1758059905.615643
 warnings: []
 docs_collections: '[["CC-MAIN-2023-40", 23393], ["CC-MAIN-2023-14", 21172], ["CC-MAIN-2023-23",
