--- a/reports/mono-3.0/HPLT-v3-asm_Beng.yaml
+++ b/reports/mono-3.0/HPLT-v3-asm_Beng.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-asm_Beng
-srclang: as
+srclang: asm
 timestamp: 1758062644.023079
 warnings: []
 docs_collections: '[["CC-MAIN-2020-45", 21858], ["CC-MAIN-2023-06", 21327], ["CC-MAIN-2023-14",
