Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-ben_Beng.yaml
+++ b/reports/mono-3.0/HPLT-v3-ben_Beng.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-ben_Beng
-srclang: bn
+srclang: ben
 timestamp: 1758081227.7538068
 warnings: []
 docs_collections: '[["CC-MAIN-2023-40", 696336], ["CC-MAIN-2020-24", 692085], ["CC-MAIN-2020-05",
