--- a/reports/mono-3.0/HPLT-v3-bul_Cyrl.yaml
+++ b/reports/mono-3.0/HPLT-v3-bul_Cyrl.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-bul_Cyrl
-srclang: bg
+srclang: bul
 timestamp: 1758169322.8716238
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 1471051], ["wide11", 1377259], ["CC-MAIN-2018-05",
