Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-cat_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-cat_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-cat_Latn
-srclang: ca
+srclang: cat
 timestamp: 1758169325.428386
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 1472965], ["CC-MAIN-2020-05", 1271015], ["CC-MAIN-2018-05",
