--- a/reports/mono-3.0/HPLT-v3-ces_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-ces_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-ces_Latn
-srclang: cs
+srclang: ces
 timestamp: 1758217547.5453308
 warnings: []
 docs_collections: '[["CC-MAIN-2016-44", 5049515], ["CC-MAIN-2018-05", 3875854], ["CC-MAIN-2020-05",
