--- a/reports/mono-3.0/HPLT-v3-cmn_Hant.yaml
+++ b/reports/mono-3.0/HPLT-v3-cmn_Hant.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-cmn_Hant
-srclang: zh
+srclang: cmn
 timestamp: 1758216333.408869
 warnings: []
 docs_collections: '[["wide17", 32666994], ["CC-MAIN-2020-05", 3070287], ["CC-MAIN-2020-10",
