Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-dan_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-dan_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-dan_Latn
-srclang: da
+srclang: dan
 timestamp: 1758169323.4331398
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 2120609], ["CC-MAIN-2018-05", 1575128], ["CC-MAIN-2017-26",
