--- a/reports/mono-3.0/HPLT-v3-deu_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-deu_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-deu_Latn
-srclang: de
+srclang: deu
 timestamp: 1758302489.1857216
 warnings: []
 docs_collections: '[["CC-MAIN-2018-05", 25634382], ["CC-MAIN-2020-05", 25600374],
