Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-ell_Grek.yaml
+++ b/reports/mono-3.0/HPLT-v3-ell_Grek.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-ell_Grek
-srclang: el
+srclang: ell
 timestamp: 1758217547.413522
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 3418171], ["CC-MAIN-2020-05", 2841825], ["wide11",
