--- a/reports/mono-3.0/HPLT-v3-eng_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-eng_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-eng_Latn-SAMPLED
-srclang: en
+srclang: eng
 timestamp: 1758689220.4829204
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 71312], ["CC-MAIN-2022-21", 64975], ["CC-MAIN-2018-05",
