Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-fin_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-fin_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-fin_Latn
-srclang: fi
+srclang: fin
 timestamp: 1758217539.7206345
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 2527854], ["CC-MAIN-2020-05", 1909491], ["CC-MAIN-2018-05",
