--- a/reports/mono-3.0/HPLT-v3-fra_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-fra_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-fra_Latn
-srclang: fr
+srclang: fra
 timestamp: 1758818948.7190917
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 23395579], ["CC-MAIN-2017-26", 21772375],
