--- a/reports/mono-3.0/HPLT-v3-guj_Gujr.yaml
+++ b/reports/mono-3.0/HPLT-v3-guj_Gujr.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-guj_Gujr
-srclang: gu
+srclang: guj
 timestamp: 1758212935.682198
 warnings: []
 docs_collections: '[["CC-MAIN-2023-14", 118779], ["CC-MAIN-2022-40", 109084], ["CC-MAIN-2023-06",
