Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-heb_Hebr.yaml
+++ b/reports/mono-3.0/HPLT-v3-heb_Hebr.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-heb_Hebr
-srclang: he
+srclang: heb
 timestamp: 1758169324.9124005
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 1437946], ["CC-MAIN-2020-10", 920567], ["CC-MAIN-2020-24",
