--- a/reports/mono-3.0/HPLT-v3-hin_Deva.yaml
+++ b/reports/mono-3.0/HPLT-v3-hin_Deva.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-hin_Deva
-srclang: hi
+srclang: hin
 timestamp: 1758178695.478011
 warnings: []
 docs_collections: '[["CC-MAIN-2023-40", 1124811], ["CC-MAIN-2023-14", 1113644], ["CC-MAIN-2023-50",
