--- a/reports/mono-3.0/HPLT-v3-hrv_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-hrv_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-hrv_Latn
-srclang: hr
+srclang: hrv
 timestamp: 1758697869.096541
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 1255393], ["CC-MAIN-2020-24", 964629], ["CC-MAIN-2020-10",
