--- a/reports/mono-3.0/HPLT-v3-hun_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-hun_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-hun_Latn
-srclang: hu
+srclang: hun
 timestamp: 1758217463.326016
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 2306789], ["CC-MAIN-2018-05", 2216584], ["CC-MAIN-2017-26",
