Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-ind_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-ind_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-ind_Latn
-srclang: id
+srclang: ind
 timestamp: 1758171659.7832978
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 5641003], ["CC-MAIN-2020-05", 5248232], ["CC-MAIN-2023-40",
