--- a/reports/mono-3.0/HPLT-v3-isl_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-isl_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-isl_Latn
-srclang: is
+srclang: isl
 timestamp: 1758171434.6119816
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 199115], ["CC-MAIN-2018-05", 134536], ["CC-MAIN-2021-25",
