--- a/reports/mono-3.0/HPLT-v3-ita_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-ita_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-ita_Latn
-srclang: it
+srclang: ita
 timestamp: 1758236676.261364
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 13683099], ["CC-MAIN-2017-26", 11960851],
