Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-urd_Arab.yaml
+++ b/reports/mono-3.0/HPLT-v3-urd_Arab.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-urd_Arab
-srclang: ur
+srclang: urd
 timestamp: 1758217771.0210211
 warnings: []
 docs_collections: '[["CC-MAIN-2018-39", 256261], ["CC-MAIN-2018-05", 202750], ["CC-MAIN-2021-39",
