Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-tam_Taml.yaml
+++ b/reports/mono-3.0/HPLT-v3-tam_Taml.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-tam_Taml
-srclang: ta
+srclang: tam
 timestamp: 1758217122.3282201
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 375769], ["CC-MAIN-2018-39", 342764], ["CC-MAIN-2020-05",
