--- a/reports/mono-3.0/HPLT-v3-tel_Telu.yaml
+++ b/reports/mono-3.0/HPLT-v3-tel_Telu.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-tel_Telu
-srclang: te
+srclang: tel
 timestamp: 1758217097.3349705
 warnings: []
 docs_collections: '[["CC-MAIN-2023-14", 181175], ["CC-MAIN-2023-40", 178410], ["CC-MAIN-2022-21",
