--- a/reports/mono-3.0/HPLT-v3-tha_Thai.yaml
+++ b/reports/mono-3.0/HPLT-v3-tha_Thai.yaml
@@ -1,5 +1,5 @@
 corpus: tha_Thai.jsonl.tsv
-srclang: th
+srclang: tha
 timestamp: 1759132318.059925
 warnings: []
 docs_collections: '[["CC-MAIN-2021-25", 2376993], ["CC-MAIN-2021-39", 1888778], ["CC-MAIN-2021-31",
