--- a/reports/mono-3.0/HPLT-v3-tir_Ethi.yaml
+++ b/reports/mono-3.0/HPLT-v3-tir_Ethi.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-tir_Ethi
-srclang: ti
+srclang: tir
 timestamp: 1758171622.632789
 warnings: []
 docs_collections: '[["CC-MAIN-2018-05", 3932], ["CC-MAIN-2020-40", 2735], ["CC-MAIN-2018-34",
