--- a/reports/mono-3.0/HPLT-v3-tur_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-tur_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-tur_Latn
-srclang: tr
+srclang: tur
 timestamp: 1758280732.7876537
 warnings: []
 docs_collections: '[["CC-MAIN-2016-44", 8291598], ["CC-MAIN-2018-05", 4756484], ["wide11",
