Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-san_Deva.yaml
+++ b/reports/mono-3.0/HPLT-v3-san_Deva.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-san_Deva
-srclang: sa
+srclang: san
 timestamp: 1758169329.3365188
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 4104], ["CC-MAIN-2018-05", 2815], ["CC-MAIN-2020-10",
