--- a/reports/mono-3.0/HPLT-v3-slk_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-slk_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-slk_Latn
-srclang: sk
+srclang: slk
 timestamp: 1758217463.4482594
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 1283566], ["CC-MAIN-2018-05", 1159311], ["CC-MAIN-2023-06",
