--- a/reports/mono-3.0/HPLT-v3-slv_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-slv_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-slv_Latn
-srclang: sl
+srclang: slv
 timestamp: 1758174607.3658006
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 782899], ["CC-MAIN-2020-24", 598205], ["CC-MAIN-2020-10",
