--- a/reports/mono-3.0/HPLT-v3-spa_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-spa_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-spa_Latn
-srclang: es
+srclang: spa
 timestamp: 1758686143.2542515
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 32077534], ["CC-MAIN-2018-05", 25337136],
