--- a/reports/mono-3.0/HPLT-v3-swe_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-swe_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-swe_Latn
-srclang: sv
+srclang: swe
 timestamp: 1758217434.2412362
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 4540783], ["CC-MAIN-2018-05", 4096776], ["CC-MAIN-2020-05",
