--- a/reports/mono-3.0/HPLT-v3-sin_Sinh.yaml
+++ b/reports/mono-3.0/HPLT-v3-sin_Sinh.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-sin_Sinh
-srclang: si
+srclang: sin
 timestamp: 1758207596.51977
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 77403], ["CC-MAIN-2018-05", 57889], ["CC-MAIN-2017-51",
